--- a/public/index.html
+++ b/public/index.html
@@ -23,11 +23,19 @@
                 <label for="">Room name</label>
                 <input type="text" name="room">
             </div>
+            <div class="form-field" id="rooms">
+                <select name="listrooms">
+                </select>
+            </div>
             <div class="form-field">
                 <button>Join</button>
             </div>
         </form>
     </div>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/js/libs/jquery-3.3.1.min.js"></script>
+    <script src="/js/index.js"></script>
+
 </body>
 
 </html>
